Corruption of bge modules #40132

Closed
opened 2014-05-11 00:32:09 +02:00 by Raf Colson · 13 comments

System Information
Windows 7 64 bit, Nvidia GeForce GT540M Cuda

Blender Version
Broken: 2.65 up to current: 2.70a
Worked: 2.64a

Short description of error
Modules such as bge.logic (GameLogic), bge.texture (VideoTexture), ... are overwritten by folders with corresponding names 'GameLogic', 'VideoTexture', ... if they are located in the same directory as the opened blend file, which makes these modules unaccessible.

Exact steps for others to reproduce the error
Press 'P' to play the game. Check the System Console to compare the results if the folders are in the same directory as the blend file, and when they are not.
Corruption_of_bge_modules.zip

**System Information** Windows 7 64 bit, Nvidia GeForce GT540M Cuda **Blender Version** Broken: 2.65 up to current: 2.70a Worked: 2.64a **Short description of error** Modules such as bge.logic (GameLogic), bge.texture (VideoTexture), ... are overwritten by folders with corresponding names 'GameLogic', 'VideoTexture', ... if they are located in the same directory as the opened blend file, which makes these modules unaccessible. **Exact steps for others to reproduce the error** Press 'P' to play the game. Check the System Console to compare the results if the folders are in the same directory as the blend file, and when they are not. [Corruption_of_bge_modules.zip](https://archive.blender.org/developer/F88301/Corruption_of_bge_modules.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @raco

Added subscriber: @raco

Added subscribers: @ideasman42, @Moguri

Added subscribers: @ideasman42, @Moguri

bge.logic, etc are actually just aliases to modules such as GameLogic (this was done to keep compatibility with older scripts). Therefore, when you have a GameLogic folder, it overrides the builtin GameLogic module, which bge.logic then references. I don't know if this is really something worth fixing though. Campbell, what are your thoughts?

bge.logic, etc are actually just aliases to modules such as GameLogic (this was done to keep compatibility with older scripts). Therefore, when you have a GameLogic folder, it overrides the builtin GameLogic module, which bge.logic then references. I don't know if this is really something worth fixing though. Campbell, what are your thoughts?
Author

I would like to add my opinion. It may be not so very important. Probably not very straightforward to have folders named 'GameLogic' or 'VideoTexture' anyway. So since this is just a design issue, I don't think it's worth fixing it either. But then I think the only thing that needs to be done is adding to the API documentation that it should be avoided to have folders in the same directory as the opened blend file with names: 'GameLogic', 'VideoTexture', ... I think this would provide the necessary transparency.

I would like to add my opinion. It may be not so very important. Probably not very straightforward to have folders named 'GameLogic' or 'VideoTexture' anyway. So since this is just a design issue, I don't think it's worth fixing it either. But then I think the only thing that needs to be done is adding to the API documentation that it should be avoided to have folders in the same directory as the opened blend file with names: 'GameLogic', 'VideoTexture', ... I think this would provide the necessary transparency.
Mitchell Stokes was assigned by Bastien Montagne 2014-05-11 18:59:34 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Campbell, here is a patch adding a warning to the docs:
bge_mod_warning.dff

Could you give this a quick review?

Campbell, here is a patch adding a warning to the docs: [bge_mod_warning.dff](https://archive.blender.org/developer/F89165/bge_mod_warning.dff) Could you give this a quick review?
Mitchell Stokes removed their assignment 2014-05-16 05:15:44 +02:00
Campbell Barton was assigned by Mitchell Stokes 2014-05-16 05:15:44 +02:00

I would rather not add notes like this in docs since this can be fixed in the code.

See: BPyInit_bmesh how it initializes submodules.

This can be a replacement for setupGamePython use of PyRun_SimpleString

I would rather not add notes like this in docs since this can be fixed in the code. See: `BPyInit_bmesh` how it initializes submodules. This can be a replacement for `setupGamePython` use of `PyRun_SimpleString`
Campbell Barton was unassigned by Inês Almeida 2014-06-21 19:45:11 +02:00
Inês Almeida self-assigned this 2014-06-21 19:45:11 +02:00
Member

I started this task on my soc-2014-bge branch but did not finish it.
Commits so far are 14fceb6, d503f8a and 140a3ac
I left my non working changes has a diff: D615

I started this task on my soc-2014-bge branch but did not finish it. Commits so far are 14fceb6, d503f8a and 140a3ac I left my non working changes has a diff: [D615](https://archive.blender.org/developer/D615)
Inês Almeida removed their assignment 2014-08-23 20:12:59 +02:00
Member

Added subscriber: @brita

Added subscriber: @brita

This issue was referenced by 15cd222270

This issue was referenced by 15cd2222702dabcb29cfba6f072b84ed1c52ec11
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 15cd222270.

Closed by commit 15cd222270.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40132
No description provided.